# Learning_Django

./: pyproject.toml
learning_django/: db.sqlite3
learning_django/learning_django/: settings.py  urls.py
learning_django/school/: data.json  urls.py  views.py
