[tool.poetry]
name = "learning-django"
version = "0.1.0"
description = ""
authors = ["Mohammed-Salama <mohammedsalama1617@gmail.com>"]
readme = "README.md"
packages = [{include = "learning_django"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
